# NLUI

./: .editorconfig  .gitattributes  .gitignore  .golangci.yml  .goreleaser.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README.zh.md  SECURITY.md  docker-compose.yml  go.mod  go.sum  kelper.example.yaml  nlui.example.yaml  package-lock.json  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
.husky/: pre-commit
bootstrap/: bootstrap.go
cmd/dump/: main.go
cmd/kelper/: main.go
cmd/nlui/: main.go
config/: config.go
core/bootstrap/: bootstrap.go
core/conversation/: manager.go  manager_test.go
core/llm/: client.go  gemini.go  interface.go  types.go
core/toolloop/: loop.go  loop_test.go  truncate.go  truncate_test.go
desktop/: .gitignore  Kelper-res.syso  app.go  go.mod  go.sum  main.go  wails.json
desktop/frontend/: index.html  package-lock.json  package.json  package.json.md5  tsconfig.json
docs/: index.md
docs/.vitepress/: config.mts
docs/guide/: api.md  architecture.md  configuration.md  contributing.md  desktop.md  docker.md  getting-started.md  mcp.md  sse-events.md
docs/sdk/: engine.md  overview.md
docs/zh/: index.md
engine/: engine.go
frontend/: package-lock.json
gateway/: builder.go  builder_test.go  caller.go  openapi.go  toolset.go  toolset_test.go
mcp/: client.go  protocol.go  server.go
presets/: jsonplaceholder.toolset.json  openweathermap.toolset.json  petstore.toolset.json  presets.go
sdk/: ARCHITECTURE.en.md  ARCHITECTURE.zh.md  FEATURE_PARITY.en.md  FEATURE_PARITY.md  IMPLEMENTATION_STATUS.en.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_STATUS.zh.md  README.md
sdk/components/: CHANGELOG.en.md  CHANGELOG.zh.md  IMPLEMENTATION_SUMMARY.en.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.zh.md  README.md  package.json  rollup.config.js  tsconfig.build.json  tsconfig.json
sdk/engine/: package.json  tsconfig.json
sdk/python/: README.md  pyproject.toml
sdk/python/nlui/: __init__.py  async_client.py  client.py  extended_client.py  types.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/examples/: basic_chat.rs  complete_example.rs
sdk/rust/src/: lib.rs  types.rs
server/: handlers.go  server.go
service/: llm.go  service.go  target.go
testdata/: petstore.json
(+200 files in other folders)
