[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nlui"
version = "0.1.0"
description = "NLUI Python SDK - Natural Language User Interface client"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "ZacharyZcR", email = "zacharyzcr1984@gmail.com" }
]
keywords = ["nlui", "ai", "llm", "natural-language", "chat"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[project.urls]
Homepage = "https://github.com/ZacharyZcR/NLUI"
Documentation = "https://github.com/ZacharyZcR/NLUI/tree/main/sdk"
Repository = "https://github.com/ZacharyZcR/NLUI"
Issues = "https://github.com/ZacharyZcR/NLUI/issues"

[tool.hatch.build.targets.wheel]
packages = ["nlui"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
