[package]
name = "nlui"
version = "1.0.0"
edition = "2021"
authors = ["ZacharyZcR <zachary@example.com>"]
description = "Rust SDK for NLUI (Natural Language User Interface)"
license = "MIT"
repository = "https://github.com/ZacharyZcR/NLUI"
keywords = ["nlui", "llm", "openapi", "api"]
categories = ["api-bindings", "web-programming"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio-stream = "0.1"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
